stylized the recipe site with some sweet designs

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Recipes</h1>
-        <p>The one stop shop for all recipes: no ads, no bs</p>
-        <ul>
-            <li><a href="pages/chicken_noodle_soup.html">Chicken Noodle Soup</a></li>
-            <li><a href="pages/chili.html">Pennsylvania Chili</a></li>
-            <li><a href="pages/lasagna.html">Lasagna</a></li>
-            <li><a href="pages/steak.html">Steak</a>    </li>
+        
+        <h1>Recipes by Nick</h1>
+        <p class="boxes sub-heading">The one stop shop for all recipes: no ads, no bs</p>
+        <p class="boxes">i am just going to type out a longer line of text here so i can test out my super cool new boxes class that i made. I want to see how it reacts to a longer chunk of text with wrapping and that sort of thing. also how are percentages different from hardcoding the pixel values when the target item gets displayed in the browser? maybe we will find out, maybe not. Keep er tuned</p>
+        <ul class="listCenter" id="home-list">
+            <li><a href="pages/chicken_noodle_soup.html"><button>Chicken Noodle Soup</button></a></li>
+            <li><a href="pages/chili.html"><button>Pennsylvania Chili</button></a></li>
+            <li><a href="pages/lasagna.html"><button>Lasagna</button></a></li>
+            <li><a href="pages/steak.html"><button>Steak</button></a></li>
         </ul>
+        
     </body>
 </html>
