--- a/pages/chicken_noodle_soup.html
+++ b/pages/chicken_noodle_soup.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe: Chicken Noodle Soup</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Chicken Noodle Soup</h1>
+        <div class="center-img">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ30It35ExvA8Wucdi5tuqyvR_HXZ1oYZhFkw&s"
             alt="A white bowl of chicken noodle soup with carrots, hearty chunks of chicken, and specs of green shaved scallions throughout."
-            height="300" width="400"
-            ><p></p>
-        <ul>Ingredients
+            height="300" width="400" 
+            ></div><p></p>
+        <h4>Ingredients</h4>
+        <ul>
             <li>Chicken thighs (6)</li>
             <li>Water (3 qts)</li>
             <li>Carrots (1 lb)</li>
@@ -19,7 +22,8 @@
             <li>Pasta (1 lb)</li>
             <li>Pepper (to taste)</li>
         </ul>
-        <ol>Cooking Directions
+        <h4>Cooking Directions</h4>
+        <ol>
             <li>Bring water to a boil over high heat</li>
             <li>Drop in boullion cubes</li>
             <li>When heavy boil: Add raw chicken thighs</li>
@@ -29,8 +33,9 @@
             <li>Add pasta and continue boil until pasta is fully cooked</li>
             <li>Add pepper and other spices at any time</li>
         </ol>
-
-        <a href="../index.html">Main Page</a>
+        <div class="but-center">
+        <a href="../index.html"><button id="listCenter">Main Page</button></a>
+        </div>
     </body>
 
 </html>
