--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -3,25 +3,31 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe: Lasagna</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Lasagna</h1>
+        <div class="center-img">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj0Lr3YhepYTBKH5PqYu4BSSjrbZU2tx5Zxg&s"
             alt="unilever food solutions philippines, it might be plastic lasagna, i guess it looks okay"
-        >
+        ></div>
         <p></p>
-        <ul>Ingredients
+        <h4>Ingredients</h4>
+        <ul>
             <li>Long noodle</li>
             <li>Pasta sauce</li>
             <li>Mozzarella Cheese</li>
             <li>Parsely</li>
         </ul>
-        <ol>Directions
+        <h4>Cooking Directions</h4>
+        <ol>
             <li>Boil the noodles</li>
             <li>While boiling, cook the sauce</li>
             <li>Layer noodles, sauce, and mozzarella chees</li>
             <li>Bake in the oven to smelt</li>
         </ol>
-        <a href="../index.html">Main Page</a>
+        <div class="but-center">
+            <a href="../index.html"><button id="listCenter">Main Page</button></a>
+            </div>
     </body>
 </html>
