--- a/pages/chili.html
+++ b/pages/chili.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe: Pennsylvania Chili</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Pennsylvania Chili</h1>
+        <div class="center-img">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1uvoQqp9udFPB0z2z-PltbwXZOtIjmHMrCQ&s"
             alt="A brown bowl of brown chili, it doesn't exactly look appetizing"
-            >
-        <ul>Ingredients
+            ></div>
+        <h4>Ingredients</h4>
+        <ul>
             <li>Ground Beef</li>
             <li>Tomato Sauce</li>
             <li>Tomato Paste</li>
@@ -19,13 +22,16 @@
             <li>Green Pepper</li>
             <li>Onion</li>
         </ul>
-        <ol>Directions
+        <h4>Cooking Directions</h4>
+        <ol>
             <li>Brown beef in bottom of large stock pot</li>
             <li>Chop onion and pepper add to beef while cooking</li>
             <li>Add tomato sauce/paste and beef broth, reduce heat to low</li>
             <li>Add beans and simmer for 1-3 hrs (depending on how hungry you are)</li>
         </ol>
         
-        <a href="../index.html">Main Page</a>
+        <div class="but-center">
+            <a href="../index.html"><button id="listCenter">Main Page</button></a>
+            </div>
     </body>
 </html>
